infra/k8s/docker-practice2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-practice2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-practice2
  template: 
    metadata:
      labels:
        app: docker-practice2
    spec:
      containers:
        - name: docker-practice2
          image: olaodus/docker-practice2
---
apiVersion: v1
kind: Service
metadata:
  name: docker-practice2-clusterip-srv
spec:
  selector:
    app: docker-practice2
  ports:
    - name: docker-practice2
      protocol: TCP
      port: 4001
      targetPort: 4001
