infra/k8s/docker-practice2-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-practice2-srv
spec:
  type: NodePort
  selector:
    app: docker-practice2
  ports:
    - name: docker-practice2
      protocol: TCP
      port: 4001
      targetPort: 4001
