infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: bisidocker.com
      http:
        paths:
          - path: /docker2
            backend:
              serviceName: docker-practice2-clusterip-srv
              servicePort: 4001
          - path: /docker1
            backend:
              serviceName: docker-practice-clusterip-srv
              servicePort: 4000
